<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLeft"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Button" />

        <Button
            android:id="@+id/btnMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />

        <Button
            android:id="@+id/btnRight"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Button" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
          
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_weight="7"
            android:text="@string/sun" />
        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_weight="7"
            android:text="@string/mon" />
        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_weight="7"
            android:text="@string/tues" />
        <TextView
           
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_weight="7"
            android:text="@string/wed" />
        <TextView
             android:layout_weight="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thurs" />
        <TextView
            
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="7"
            android:text="@string/fri" />
        <TextView
           
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:layout_weight="7"
            android:text="@string/sat" />

    </LinearLayout>

    <GridView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnWidth="100dp"
        android:gravity="center"
        android:numColumns="7"
        android:stretchMode="columnWidth" >
    </GridView>

</LinearLayout>